# FACSIMILE

./: .gitignore  404.html  CNAME  LICENSE  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  requirements.txt  setup.py  style.mplstyle
.github/workflows/: black_formatter.yml  docs.yml  python-app.yml
css/: mkdocstrings.css
data/: best_clf_70.pkl  example_data.csv
docs/: index.md
docs/examples/: sample_size.ipynb  sticsa_example.ipynb  tutorial.ipynb
docs/reference/: eval.md  model.md  plotting.md  utils.md
examples/sample_size/: index.html
examples/sticsa_example/: index.html
examples/tutorial/: index.html
facsimile/: eval.py  model.py  plotting.py  utils.py
notebooks/: sticsa_example.ipynb  tutorial.ipynb
reference/eval/: index.html
reference/model/: index.html
reference/plotting/: index.html
reference/utils/: index.html
tests/: test_eval.py  test_model.py  test_utils.py
