[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FACSIMILE-py"
version = "0.1.0"
description = "A package for predicting questionnaire scores from reduced item sets"
readme = "readme.md"
license = { text = "MIT" }

authors = [
    { name = "Toby Wise", email = "toby.wise@kcl.ac.uk" }
]

dependencies = [
    "pandas",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "joblib",
    "requests",
]

[project.urls]
Homepage = "https://facsimile.thewiselab.org/"
Repository = "https://github.com/the-wise-lab/FACSIMILE"

[tool.hatch.build.targets.wheel]
packages = ["facsimile"]